--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^2.1.0
+  
 
   english_words: ^4.0.0
   provider: ^6.0.0
+  path_provider: ^2.0.14
 
 dev_dependencies:
   flutter_test:
